--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,9 @@
             id=""
             placeholder="Search Friend"
           />
-          <input type="button" name="Submit" class="main__form--button" />
+          <button type="button" value=">" name="Submit" class="main__form--button">
+            <i class="fas fa-user-friends main__form--button--icon"></i>
+          </button>
         </form>
       </main>
 
