--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,19 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
 
@@ -35,6 +47,23 @@
             <i class="fas fa-user-friends main__form--button--icon"></i>
           </button>
         </form>
+        <div>
+          <section class="main__section" id="demo">
+            <div class="main__section--container">
+              <img
+                class="main__section--container--img"
+                id=""
+                src="./assets/images/tay-billboard.jpg"
+                alt=""
+              />
+              <div class="main__section--container--text">
+                <h1 class="main__section--container--text--name">Nombre</h1>
+                <h3 class="main__section--container--text--city">Ciudad</h3>
+                <h3 class="main__section--container--text--user">Usuario</h3>
+              </div>
+            </div>
+          </section>
+        </div>
       </main>
 
       <footer class="footer"></footer>
