--- a/public/index.html
+++ b/public/index.html
@@ -37,29 +37,34 @@
       <main class="main">
         <form class="main__form" action="GET">
           <input
-            class="main__form--input"
+            class="js-search main__form--input"
             type="text"
             name="Search"
             id=""
             placeholder="Search Friend"
           />
-          <button type="button" value=">" name="Submit" class="main__form--button">
+          <button
+            type="button"
+            value=">"
+            name="Submit"
+            class="js-button main__form--button"
+          >
             <i class="fas fa-user-friends main__form--button--icon"></i>
           </button>
         </form>
         <div>
-          <section class="main__section" id="demo">
-            <div class="main__section--container">
+          <section class="js-section main__section" id="demo">
+            <div class="js-container main__section--container">
               <img
-                class="main__section--container--img"
+                class="js-image main__section--container--img"
                 id=""
                 src="./assets/images/tay-billboard.jpg"
                 alt=""
               />
               <div class="main__section--container--text">
-                <h1 class="main__section--container--text--name">Nombre</h1>
-                <h3 class="main__section--container--text--city">Ciudad</h3>
-                <h3 class="main__section--container--text--user">Usuario</h3>
+                <h1 class="js-name main__section--container--text--name">Nombre</h1>
+                <h3 class="js-city main__section--container--text--city">Ciudad</h3>
+                <h3 class="js-user main__section--container--text--user">Usuario</h3>
               </div>
             </div>
           </section>
