--- a/public/index.html
+++ b/public/index.html
@@ -52,23 +52,17 @@
             <i class="fas fa-user-friends main__form--button--icon"></i>
           </button>
         </form>
-        <div>
-          <section class="js-section main__section" id="demo">
-            <div class="js-container main__section--container" id="">
-              <img
-                class="js-image main__section--container--img"
-                id=""
-                src="./assets/images/tay-billboard.jpg"
-                alt=""
-              />
-              <div class="main__section--container--text">
-                <h1 class="js-name main__section--container--text--name"></h1>
-                <h3 class="js-city main__section--container--text--city"></h3>
-                <h3 class="js-user main__section--container--text--user"></h3>
-              </div>
+
+        <ul class="js-section main__section" id="">
+          <li class="js-container main__section--container" id="">
+            <img class="js-image main__section--container--img" id="" src="" alt="" />
+            <div class="main__section--container--text">
+              <h1 class="js-name main__section--container--text--name"></h1>
+              <h3 class="js-city main__section--container--text--city"></h3>
+              <h3 class="js-user main__section--container--text--user"></h3>
             </div>
-          </section>
-        </div>
+          </li>
+        </ul>
       </main>
 
       <footer class="footer"></footer>
