--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,13 @@
         </ul>
       </main>
 
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <ul class="footer__list">
+          <li class="footer__list--item">Acerca de</li>
+          <li class="footer__list--item">Contacto</li>
+          <li class="footer__list--item">Asistencia</li>
+        </ul>
+      </footer>
 
     </div>
     <script src="./assets/js/main.js"></script>
